--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@ Incorpora muchas características del modelo en espiral. Es evolutivo por natura
 
 
   </h2>
-      <img src="img/imagen11.png" style="width: 70%;">
+      <img src="img/imagenori.png" style="width: 70%;">
 
         <p>El modelo orientado a objetos utiliza el paradigma de la orientación a objetos para el desarrollo de software.
 Este enfoque realiza la construcción de modelos de un sistema por medio de la identificación y la especificación de un conjunto de objetos relacionados, que colaboran entre si de acuerdo a los requerimientos establecidos para el sistema de objetos.
