--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Clarence Taylor</span>
+      <span class="d-block d-lg-none">Anthony Moran</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/image1.jpg" alt="">
       </span>
@@ -366,7 +366,7 @@ El modelo DRA es una adaptación a alta velocidad del ciclo de vida clásico en 
 
 
 </h2>
-    <img src="img/imagen10.png" style="width: 70%;">
+    <img src="img/reutilizacion.png" style="width: 70%;">
     <p>Esta aproximación se basa en la existencia de un número significativo de elementos reutilizables. El proceso de desarrollo, se centra en la integración de estos elementos en un sistema, en lugar de desarrollarlo desde cero.
 Incorpora muchas características del modelo en espiral. Es evolutivo por naturaleza.
 </p>
