--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ El período de tiempo que comienza cuando se concibe un producto software y fina
         <div class="w-100">
           <h2 class="mb-5">Espiral
     </h2>
-          <img src="img/imagen9.png" style="width: 70%;">
+          <img src="img/espiral.png" style="width: 70%;">
           <h5>En este modelo, el esfuerzo de desarrollo es iterativo. Tan pronto como uno completa un esfuerzo de desarrollo, otro comienza. Además, en cada desarrollo ejecutado, puedes seguir estos cuatros pasos.
 </h5>
 <p>1.Determinar qué quieres lograr.
