--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ El período de tiempo que comienza cuando se concibe un producto software y fina
     <div class="w-100">
       <h2 class="mb-5">Desarrollo incremental
 </h2>
-      <img src="img/imagen7.png" style="width: 70%;">
+      <img src="img/bosquejo.png" style="width: 70%;">
       <h5>Beneficios:  </h5>
       <p>•El costo de atender las necesidades cambiantes de los clientes se reduce</p>
       <p>•Es más fácil obtener retroalimentación de los clientes en el trabajo de desarrollo que se ha hecho</p>
@@ -335,7 +335,7 @@ El período de tiempo que comienza cuando se concibe un producto software y fina
             <h2 class="mb-5">Desarrollo Rápido de Aplicaciones (DRA)
 
       </h2>
-            <img src="img/imagen8.png" style="width: 50%;">
+            <img src="img/rapido.png" style="width: 50%;">
             <p>Es un modelo de proceso del ciclo de vida clásico que enfatiza un ciclo de vida de desarrollo extremadamente corto.
 El modelo DRA es una adaptación a alta velocidad del ciclo de vida clásico en el que se logra el desarrollo rápido utilizando un enfoque de construcción basado en componentes. Si se comprenden bien los requisitos y se limita el ámbito del proyecto, el proceso DRA permite al equipo de desarrollo crear un sistema completamente funcional dentro de períodos cortos de tiempo</p>
 <h3>Fases</h3>
